crates/ship-code/tests/snapshots/snapshot_tests__edit_insert_lines.snap
---
source: crates/ship-code/tests/snapshot_tests.rs
expression: diff
---
--- a/src/utils.rs
+++ b/src/utils.rs
@@ -1,3 +1,5 @@
+// Copyright 2026 Bearcove
+// Licensed under MIT
 /// Retry a fallible operation up to `max_retries` times.
 pub fn retry<F, T, E>(max_retries: u32, mut f: F) -> Result<T, E>
 where
