crates/ship-code/tests/snapshots/snapshot_tests__edit_replace_lines.snap
---
source: crates/ship-code/tests/snapshot_tests.rs
expression: diff
---
--- a/src/utils.rs
+++ b/src/utils.rs
@@ -15,12 +15,14 @@
 
 /// Truncate a string to `max_len` characters, appending "..." if truncated.
 pub fn truncate(s: &str, max_len: usize) -> String {
-    if s.len() <= max_len {
+pub fn truncate(s: &str, max_len: usize) -> String {
+    if s.chars().count() <= max_len {
         s.to_owned()
     } else {
-        format!("{}...", &s[..max_len])
+        s.chars().take(max_len).collect::<String>() + "..."
     }
 }
+}
 
 /// Parse a "key=value" string into a tuple.
 pub fn parse_kv(s: &str) -> Option<(&str, &str)> {
